# gpu_usage

./: .gitignore  APP_USAGE_GUIDE.md  FEATURE_COMPARISON.md  FINDING_YOUR_ICON.md  INSTALLATION_COMPLETE.md  LAUNCHPAD_SETUP.md  LICENSE  QUICKSTART.md  QUICK_COMMANDS.md  README.md  SETUP_COMPLETE.md  UPDATE_ICON_INSTRUCTIONS.md  VISIBILITY_TOGGLE_GUIDE.md  environment.yml  pyproject.toml  requirements.txt  setup.py
config/: settings.env.example
icons/: AppIcon.icns
scripts/: configure_app_visibility.sh  create_app_bundle.sh  create_app_icon.py  install.sh  install_to_applications.sh  refresh_icons.sh  restart.sh  run_app.sh  start.sh  status.sh  stop.sh  test_connection.sh  uninstall.sh  update_app_icon.sh
src/gpu_usage_menubar/: __init__.py  app.py  gpu_fetcher.py  icon_generator.py
tests/: test_icon_generator.py
